--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="row">
                         <label>Moneda</label>
                         <select class="u-full-width" id="moneda" name="moneda">
-                                <option value="">Elige tu moneda</option>
+                                <option value="">Elige tu moneda a cotizar</option>
                                 <option value="USD">Dolar Estadounidense</option>
                                 <option value="MXN">Peso Mexicano</option>
                                 <option value="GBP">Libras</option>
